--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul class="nav-list">
           <li class="nav-list-item">
-            <a href="index.html">Home</a>
+            <a href="index.html">home</a>
           </li>
           <li class="nav-list-item">About</li>
           <li class="nav-list-item">Topic</li>
